--- a/style.css
+++ b/style.css
@@ -221,6 +221,16 @@ p {
   left: 100px;
 }
 
+@media (max-width: 768px) {
+  .hero-image img {
+    width: 100%;
+    height: 370px;
+    object-fit: cover;
+    left: 0;
+    margin: 12px auto;
+  }
+}
+
 #hero::after {
   content: "";
   position: absolute;
