--- a/style.css
+++ b/style.css
@@ -224,8 +224,8 @@ p {
 /* For mobile devices */
 @media (max-width: 768px) {
   .hero-image img {
-    width: 120%; /* Keep this value */
-    height: 62vh; /* Adjust this value to control the height in viewport height */
+    width: 125%; /* Keep this value */
+    height: 50%; /* Adjust this value to control the height in viewport height */
     left: 0;
     margin: 0; /* Removed margin */
     max-width: none; /* Allow the image to grow beyond the container's width */
